--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ img{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     margin: 50px 0px;
     background-color: #3882F6;
     border-radius: 10px;
@@ -157,3 +157,7 @@ img{
     text-align: center;
 }
 
+.bold-content-para, .normal-content-para{
+    margin: 0px;
+    padding: 0px;
+}
